--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,12 @@
     <artifactId>guava</artifactId>                                            
     <version>18.0</version>
   </dependency> 
+  <!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
+  <dependency>
+      <groupId>org.influxdb</groupId>
+      <artifactId>influxdb-java</artifactId>
+      <version>2.7</version>
+  </dependency>
   <!-- https://mvnrepository.com/artifact/ch.cern.sparkmeasure/spark-measure -->
   <dependency>
       <groupId>ch.cern.sparkmeasure</groupId>
