--- a/pom.xml
+++ b/pom.xml
@@ -222,11 +222,16 @@
     <artifactId>guava</artifactId>                                            
     <version>18.0</version>
   </dependency> 
-  <!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
+  <!-- shading the multiple dependencies of different versions -->
   <dependency>
-      <groupId>org.influxdb</groupId>
-      <artifactId>influxdb-java</artifactId>
-      <version>2.19</version>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>3.11.0</version>
+  </dependency>
+  <dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>logging-interceptor</artifactId>
+    <version>3.11.0</version>
   </dependency>
   <!-- https://mvnrepository.com/artifact/ch.cern.sparkmeasure/spark-measure -->
   <dependency>
