--- a/pom.xml
+++ b/pom.xml
@@ -232,19 +232,19 @@
   <dependency>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>okhttp</artifactId>
-    <version>3.8.1</version>
+    <version>3.14.9</version>
   </dependency>
   <dependency>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>logging-interceptor</artifactId>
-    <version>3.8.1</version>
+    <version>3.14.9</version>
   </dependency>
   <!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
-  <dependency>
+  <!-- <dependency>
       <groupId>org.influxdb</groupId>
       <artifactId>influxdb-java</artifactId>
       <version>2.7</version>
-  </dependency>
+  </dependency> -->
   <!-- https://mvnrepository.com/artifact/ch.cern.sparkmeasure/spark-measure -->
   <dependency>
       <groupId>ch.cern.sparkmeasure</groupId>
