--- a/pom.xml
+++ b/pom.xml
@@ -226,25 +226,25 @@
   <dependency>
     <groupId>com.squareup.okio</groupId>
     <artifactId>okio</artifactId>
-    <version>1.14.0</version>
+    <version>1.13.0</version>
   </dependency>
   <!-- shading the multiple dependencies of different versions -->
   <dependency>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>okhttp</artifactId>
-    <version>3.11.0</version>
+    <version>3.13.1</version>
   </dependency>
   <dependency>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>logging-interceptor</artifactId>
-    <version>3.11.0</version>
+    <version>3.13.1</version>
   </dependency>
   <!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
-  <!-- <dependency>
+  <dependency>
       <groupId>org.influxdb</groupId>
       <artifactId>influxdb-java</artifactId>
-      <version>2.7</version>
-  </dependency> -->
+      <version>2.15</version>
+  </dependency>
   <!-- https://mvnrepository.com/artifact/ch.cern.sparkmeasure/spark-measure -->
   <dependency>
       <groupId>ch.cern.sparkmeasure</groupId>
