--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,14 @@
       <groupId>org.apache.maven.plugins</groupId>                             
       <artifactId>maven-shade-plugin</artifactId>                             
       <!-- <version>2.2</version>   -->
+      <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+        </execution>
+      </executions>
       <configuration>
         <relocations>
           <relocation>                                                        
