--- a/pom.xml
+++ b/pom.xml
@@ -185,11 +185,6 @@
       </executions>
       <configuration>
         <shadedArtifactAttached>false</shadedArtifactAttached>
-        <artifactSet>
-            <includes>
-                <include>*:*</include>
-            </includes>
-        </artifactSet>
         <filters>
             <filter>
                 <artifact>*:*</artifact>
@@ -201,21 +196,21 @@
             </filter>
         </filters>
         <relocations>
-          <relocation>                                                        
+          <!-- <relocation>                                                        
             <pattern>com.google.common</pattern>                              
             <shadedPattern>org.spark-project.guava</shadedPattern>            
             <excludes>                                                        
-              <!--                                                            
+                                                                          
                 These classes cannot be relocated, because the Java API exposes the
                 "Optional" type; the others are referenced by the Optional class.
-              -->                                                             
+                                                                           
               <exclude>com/google/common/base/Absent*</exclude>               
               <exclude>com/google/common/base/Function</exclude>              
               <exclude>com/google/common/base/Optional*</exclude>             
               <exclude>com/google/common/base/Present*</exclude>              
               <exclude>com/google/common/base/Supplier</exclude>              
             </excludes>                                                       
-          </relocation>
+          </relocation> -->
           <relocation>
             <pattern>okio</pattern>                              
             <shadedPattern>com.shaded.okio</shadedPattern> 
